<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_underline"><u>Forgot Password ?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_to_connect">New To Connect?</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="password_must_be_atleast_6_digits">Password must be atleast 6 digits</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="please_wait" tools:ignore="TypographyEllipsis">Please wait...</string>
    <string name="signed_in_successfully">Signed In Successfully</string>
    <string name="something_went_wrong">Something went wrong , Please try again later</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="forgot_password_txt">Forgot Password ?</string>
    <string name="a_password_reset_link_will_be_sent_to_your_registered_email_address">A password reset link will be sent to your registered email address.</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="joined_us_before">Joined us before ?</string>
    <string name="a_reset_password_link_has_been_sent_to_registered_email_address">A reset password link has been sent to registered email address</string>
    <string name="continue_txt">Continue</string>
    <string name="confirm_password_and_password_are_not_same">Confirm password and password are not same</string>
    <string name="creating_account">Creating Account</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="details">Details</string>
    <string name="full_name">Full Name</string>
    <string name="d_o_b">D.O.B</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel">Cancel</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="search_users">Search Users</string>
    <string name="try_again">Try Again</string>
    <string name="getting_user_details">Getting User Details</string>
    <string name="friend_request_sent_successfully">Friend Request Sent Successfully</string>
    <string name="search_users_by_name">Search Users By Name</string>
    <string name="int_string_placeholder">%1$d %2$s</string>
    <string name="requests">requests</string>
    <string name="request">request</string>
    <string name="no_friend_requests">No Friend Requests</string>


</resources>